Fix: Modal pictures don't overflow container anymore

--- a/src/components/Midia/PhotoModal.module.sass
+++ b/src/components/Midia/PhotoModal.module.sass
@@ -15,9 +15,8 @@
 
     .modalContent 
         max-width: 60%
-        max-height: 80%
+        height: 80vh
 
-        /* overflow: hidden */
         display: flex
         align-items: center
         position: relative
